# ipa-pseudocode-toolkit

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
docs/: grammar_spec.md  mapping_rules.md  phase1_report.md  phase2_plan.md  phase3_result.md  translation_improvements.md
docs/examples/: fee_function.md
exam-questions/: README.md
exam-questions/ap/2024r06a/: q03.pseudo  q03.py
exam-questions/ap/2024r06h/: q03.pseudo  q03.py
exam-questions/ap/2025r07a/: q03.pseudo  q03.py
exam-questions/ap/2025r07h/: q03.pseudo  q03.py
exam-questions/fe/2023r05/: q01.pseudo  q01.py  q02.pseudo  q02.py  q03.pseudo  q03.py  q04.pseudo  q04.py  q05.pseudo  q05.py
exam-questions/fe/2024r06/: q01.pseudo  q01.py  q02.pseudo  q02.py  q03.pseudo  q03.py  q04.pseudo  q04.py  q05.pseudo  q05.py
exam-questions/fe/2025r07/: q01.pseudo  q01.py  q02.pseudo  q02.py  q03.pseudo  q03.py  q04.pseudo  q04.py  q05.pseudo  q05.py
exam-questions/fe/sample/: q01.pseudo  q01.py  q02.pseudo  q02.py  q03.pseudo  q03.py  q04.pseudo  q04.py  q05.pseudo  q05.py
exam-questions/fe/set-sample/: q01.pseudo  q01.py  q02.pseudo  q02.py  q03.pseudo  q03.py  q04.pseudo  q04.py  q05.pseudo  q05.py  q06.pseudo  q06.py  q07.pseudo  q08.pseudo  q08.py  q09.pseudo  q09.py  q10.pseudo  q10.py  q11.pseudo  q11.py  q12.pseudo  q12.py  q13.pseudo  q13.py  q14.pseudo  q14.py  q16.pseudo  q16.py
exam-questions/ip/sample/: q01.py  (+3 more)
src/ipa_pseudocode/: __init__.py
tests/: conftest.py  test_array.py  test_executor.py  test_integration.py  test_lexer.py  test_parser.py  test_reverse_translate.py  test_trace.py  test_translator.py  test_types.py
(+34 files in other folders)
